--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
+.page-container {
+  width: 1440px;
+  height: 2076px;
+}
+
 .navbar-container {
   background-image: linear-gradient(-135deg, #e8381b 0%, #ff690f 100%);
   width: 1440px;
   height: 45px;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 0;
+  align-items: center;
+}
+
+.kayak-logo {
+  position: sticky;
+  left: 220px;
 }
 
 .tours {
   font-family: HelveticaNeue-Bold;
   font-size: 14px;
   color: #ffffff;
-  text-align: center;
+  position: sticky;
+  left: 373px;
 }
