--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* .body {
+  margin: 0px !important;
+} */
+
 .page-container {
   width: 1440px;
   height: 2076px;
@@ -9,19 +13,21 @@
   height: 45px;
   display: flex;
   justify-content: flex-start;
-  margin-top: 0;
+  top: 0;
   align-items: center;
 }
 
 .kayak-logo {
-  position: sticky;
+  position: absolute;
   left: 220px;
+  top: 17px;
 }
 
 .tours {
   font-family: HelveticaNeue-Bold;
   font-size: 14px;
   color: #ffffff;
-  position: sticky;
+  position: absolute;
   left: 373px;
+  top: 17px;
 }
