--- a/style.css
+++ b/style.css
@@ -60,10 +60,6 @@ body {
 } */
 
 .season-form {
-  font-family: HelveticaNeue;
-  font-size: 14px;
-  color: #131a1f;
-  text-align: left;
   background: #f1f4f7;
   border-radius: 2px;
   position: absolute;
@@ -73,7 +69,7 @@ body {
   left: 220px;
 }
 
-.season-text {
+/* .season-text {
   font-family: HelveticaNeue;
   font-size: 14px;
   color: #131a1f;
@@ -83,7 +79,7 @@ body {
   position: absolute;
   top: 200px;
   left: 232px;
-}
+} */
 
 .category-form {
   font-family: HelveticaNeue;
@@ -111,4 +107,14 @@ body {
   width: 239px;
   top: 181px;
   left: 705px;
+}
+
+.btn-container {
+  background-image: linear-gradient(-135deg, #ff690f 0%, #ee4719 100%);
+  border-radius: 2px;
+  width: 54px;
+  height: 54px;
+  position: absolute;
+  top: 181px;
+  left: 948px;
 }
