--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
   left: 220px;
 }
 
-/* .season-text {
+.season-text {
   font-family: HelveticaNeue;
   font-size: 14px;
   color: #131a1f;
@@ -79,7 +79,7 @@ body {
   position: absolute;
   top: 200px;
   left: 232px;
-} */
+}
 
 .category-form {
   font-family: HelveticaNeue;
@@ -95,6 +95,18 @@ body {
   left: 463px;
 }
 
+.category-text {
+  font-family: HelveticaNeue;
+  font-size: 14px;
+  color: #131a1f;
+  text-align: left;
+  height: 16px;
+  width: 215px;
+  position: absolute;
+  top: 200px;
+  left: 475px;
+}
+
 .destination-form {
   font-family: HelveticaNeue;
   font-size: 14px;
@@ -107,6 +119,18 @@ body {
   width: 239px;
   top: 181px;
   left: 705px;
+}
+
+.destination-text {
+  font-family: HelveticaNeue;
+  font-size: 14px;
+  color: #131a1f;
+  text-align: left;
+  height: 16px;
+  width: 215px;
+  position: absolute;
+  top: 200px;
+  left: 717px;
 }
 
 .btn-container {
