fixed button styling

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ select {
 select {
   /* display: none; */
   position: absolute;
-  background-color: yellow;
+  /* background-color: yellow; */
   min-width: 230px;
   border: 1px solid #ddd;
   z-index: 1;
