--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ select {
 }
 
 .page-container {
-  width: 1440px;
-  height: 2076px;
+  width: 100vw;
+  height: 100vh;
 }
 
 .navbar-container {
@@ -186,12 +186,27 @@ option {
 
 .destination-title {
   font-family: Forza-Black;
+  text-transform: uppercase;
   font-size: 20px;
   color: #ffffff;
   text-align: left;
   line-height: 20px;
   position: absolute;
   top: 609px;
+  left: 251px;
+  width: 347px;
+  height: 40px;
+}
+
+.destination-country {
+  font-family: Forza-Black;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: left;
+  line-height: 20px;
+  position: absolute;
+  top: 630px;
   left: 251px;
   width: 347px;
   height: 40px;
