--- a/style.css
+++ b/style.css
@@ -30,15 +30,22 @@ select:disabled {
 .page-container {
   width: 1440px;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 .navbar-container {
-  background-image: linear-gradient(-135deg, #e8381b 0%, #ff690f 100%);
+  background-image: linear-gradient(-135deg, #ffc2b4 0%, #fb8f67 100%);
   width: 1440px;
   height: 45px;
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  align-self: flex-start;
 }
 
 .travel-logo {
@@ -65,9 +72,8 @@ select:disabled {
   color: #131a1f;
   text-align: left;
   line-height: 56px;
-  position: absolute;
-  top: 93px;
-  left: 220px;
+  /* position: absolute; */
+  margin-top: 10%;
 }
 
 /* .form-container {
@@ -176,7 +182,7 @@ option {
 }
 
 .btn-container {
-  background-image: linear-gradient(-135deg, #ff690f 0%, #ee4719 100%);
+  background-image: linear-gradient(-135deg, #fb8f67 0%, #fb8f67 100%);
   border-radius: 2px;
   width: 54px;
   height: 54px;
